# miru

./: .coderabbit.yaml  .geminiignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEBASE_ANALYSIS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  backend_patch.py  chat_svc_asserts.txt  clean_multiple_docs.py  codecov.yml  docker-compose.ci.yml  docker-compose.yml  fix.py  fix_action_page.py  fix_action_page2.py  fix_agent_sheet.js  fix_ai_agents.py  fix_all.py  fix_all_clean.js  fix_api.py  fix_async.py  fix_calls.py  fix_chat.js  fix_chat.py  fix_coverage.py  fix_dependabot.py  fix_gitignore.py  fix_group_chat.py  fix_home.js  fix_lints.py  fix_lints10.py  fix_lints11.py  fix_lints12.py  fix_lints2.py  fix_lints3.py  (+152 more)
.github/: changelog-config.json  dependabot.yml  labels.yml
backend/: .env.example  .safety-policy.yml  Dockerfile  README.md  alembic.ini  cov_out.txt  cov_report.txt  manage.py  out.txt  patch.diff  patch_test.py  patch_test_chat.py  patch_test_chat2.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_makemigrations.py
backend/app/: __init__.py  agents.py  auth.py  config.py  crew.py  database.py  graph.py  main.py  memory.py  migrate.py  openrouter.py  passkey.py  routes.py
backend/app/api/: dependencies.py  errors.py  middleware.py
backend/app/api/v1/: agents.py  auth.py  chat.py  integrations.py  memory.py  memory.py.patch  notifications.py  productivity.py  search.py  websocket.py
backend/app/api/v1/productivity/: __init__.py  calendar_events.py  daily_brief.py  notes.py  tasks.py
backend/app/application/interfaces/: agent_repository.py
backend/app/application/use_cases/: agent_use_cases.py
backend/app/core/: config.py  middleware.py  pii_scrubber.py
backend/app/core/security/: auth.py
backend/app/core/utils/: error_handlers.py
backend/app/domain/agent_tools/: decorators.py  memory_tools.py  models.py  productivity_tools.py
backend/app/domain/agent_tools/memory/: __init__.py
backend/app/domain/agent_tools/productivity/: __init__.py  events_tools.py  notes_tools.py  tasks_tools.py  utils.py
backend/app/domain/agents/: affinity_service.py  entities.py  models.py  schemas.py  service.py
backend/app/domain/auth/: entities.py  interfaces.py  models.py  schemas.py  service.py
backend/app/domain/chat/: background_patcher.py  background_patcher2.py  background_service.py  crew_orchestrator.py  crew_patcher.py  crew_patcher2.py  dtos.py  entities.py  entities_patcher.py  language.py  models.py  prompts.py  schemas.py  service.py  service_patcher.py  signalr.py  websocket_broadcaster.py
backend/app/domain/memory/: document_service.py  graph_service.py  graph_service_patch.py  knowledge_graph_service.py  models.py  schemas.py  service.py  service_patcher.py
backend/app/domain/notifications/: models.py  schemas.py  services.py
backend/app/domain/notifications/api/: router.py
backend/app/domain/notifications/interfaces/: __init__.py  notification_client.py
backend/app/domain/notifications/use_cases/: __init__.py  send_notification.py
backend/app/domain/productivity/: __init__.py  dependencies.py  entities.py  models.py  schemas.py  service.py
backend/app/domain/productivity/interfaces/: __init__.py  repository.py
backend/app/domain/productivity/use_cases/: __init__.py  manage_productivity.py
backend/app/infrastructure/database/: base.py  neo4j.py  sqlmodel.py  supabase.py  tortoise.py  utils.py
backend/app/infrastructure/database/mappers/: agent_mapper.py
backend/app/infrastructure/database/migrations/: constants.py  generator.py  runner.py
backend/app/infrastructure/database/models/: auth_models.py  chat_models.py  chat_models_patch.py  productivity_models.py
backend/app/infrastructure/notifications/: azure_hubs.py
backend/app/infrastructure/repositories/: __init__.py  agent_repo.py  auth_repo.py  chat_repo.py  memory_repo.py  notification_repo.py  productivity_repo.py
backend/app/infrastructure/websocket/: manager.py
backend/app/migrations/: README  __init__.py  env.py
backend/app/migrations/versions/: 001_initial_migration.py
backend/migrations/models/: 0_20260312213009_init.py  1_20260321000000_add_task_due_date.py  2_20260328000000_feature_enhancements.py
backend/scripts/: enforce_postman_tests.py  generate_test_token.js  generate_token.py  seed_test_user.py
backend/sql/: init.sql
backend/tests/: conftest.py  test_agent_profile.py  test_agent_tools.py  test_agents.py  test_agents2.py  test_agents_integration.py  test_agents_routes.py  test_agents_routes2.py  test_agents_schemas.py  test_agents_service.py  test_api_coverage.py  test_api_v1_chat.py  test_api_v1_chat_success.py  test_api_v1_memory.py  test_api_v1_memory_success.py  test_auth.py  test_auth_stubs.py  test_chat.py  test_chat_background_service.py  test_chat_feedback.py  test_chat_routes.py  test_chat_routes_extra.py  test_chat_service.py  test_chat_signalr.py  test_compliance.py  test_crew.py  test_crew_orchestrator.py  test_discord_api.py  test_discord_tool.py  test_discord_tool_more.py  test_document_service.py  test_document_service_pdf_docx.py  test_events_tools.py  test_get_memory_graph.py  test_graph_service.py  test_health.py  test_infrastructure.py  test_memory.py  test_memory_dedup.py  test_memory_graph.py  (+27 more)
backend/tests/agent_tools/: test_decorators.py
backend/tests/agents/: test_agent_generation.py  test_agent_lifecycle.py
backend/tests/app/domain/notifications/: test_api.py  test_api.py.rej  test_schemas.py  test_services.py  test_use_cases.py
backend/tests/app/infrastructure/notifications/: test_azure_hubs.py  test_azure_hubs.py.rej
backend/tests/chat/: conftest.py  test_chat_crew.py  test_chat_rooms.py  test_chat_ws.py
backend/tests/postman/: 00_setup_auth.json  agents.json  auth.json  chat.json  environment.json  integrations.json  logic_tests.json  memory.json  messages.json  productivity.json  public.json  smoke_tests.json
backend/tests/productivity/: conftest.py  test_db_errors.py  test_events.py  test_notes.py  test_tasks.py
frontend/: .eslintignore  .eslintrc.js  (+15 more)
(+388 files in other folders)
