[project]
name = "miru-backend"
version = "0.1.0"
description = "FastAPI backend for Miru AI Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "granian[reload]>=1.0.0",
    "supabase>=2.3.0",
    "openrouter>=0.7.11",
    "crewai[tools]>=1.10.1",
    "crewai-tools>=0.12.1",
    "tavily-python>=0.5.0",
    "numpy>=1.26.0",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.0.1",
    "webauthn>=2.7.0",
    "pyjwt[crypto]>=2.10.0",
    "sentry-sdk[fastapi]>=2.1.0",
    "instructor>=1.7.0",
    "authlib>=1.3.0",
    "tortoise-orm>=0.24.0",
    "aerich>=0.7.2",
    "asyncpg>=0.30.0",
    "nest-asyncio",
    "litellm>=1.82.1",
    "pyopenssl>=26.0.0",
    "notificationhubs-rest-python>=1.0.2",
    "python-multipart>=0.0.22",
    "python-docx>=1.2.0",
    "pillow>=12.1.1",
    "pdf-oxide>=0.3.17",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "ty>=0.0.1",
    "types-requests>=2.31.0",
    "types-python-dateutil>=2.8.19",
    "pytest-xdist>=3.6.1",
    "safety>=3.2.0",
    "pip-audit>=2.7.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pydantic[email]>=2.11.10",
    "pyjwt>=2.12.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "sentry-sdk>=2.54.0",
    "starlette>=0.52.1",
]


[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "UP047",  # generic function should use type parameters (not supported in 3.11)
    "UP043",  # unnecessary default type args
    "TC001",  # Move app import into TYPE_CHECKING — breaks FastAPI Depends at runtime
    "TC003",  # Move stdlib import into TYPE_CHECKING — breaks Pydantic at runtime
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.isort]
profile = "black"
known_first_party = ["app"]
line_length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# Tortoise ORM JSONField and other dynamic fields don't have Python-level type annotations;
# suppressing var-annotated noise from ORM model definitions and Pydantic Settings.
[[tool.mypy.overrides]]
module = [
    "app.domain.agents.models",
    "app.domain.agent_tools.models",
    "app.domain.memory.models",
    "app.domain.auth.models",
    "app.infrastructure.database.models.chat_models",
    "app.core.config",
]
ignore_errors = true

[tool.ty.rules]
all = "error"

[tool.ty.terminal]
error-on-warning = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
markers = [
    # smoke: lightweight tests that run against a live deployment.
    # Tag tests with @pytest.mark.smoke and run with: pytest -m smoke
    "smoke: marks tests as post-deploy smoke checks (run with '-m smoke')",
]

[tool.aerich]
tortoise_orm = "app.infrastructure.database.tortoise.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
